# jurisprudencia-stj-ws-async

./: .gitignore  LICENSE  NOTES.md  README.md  main.py  pesquisa.json  pyproject.toml
pesquisas_para_teste/erros/: pesquisa erro = 0 acordaos 1 e 0 acordaos 2.json  pesquisa erro = abas com 404 page inside and start at tab acordaos 2.json
proxies/: free-br-proxies-from-proxyscrape.txt  free-world-proxies-from-proxyscape.txt
src/config/: constants.py  parsing.py
src/extraction/: __init__.py  ext.py  ext_async.py  ext_sync.py
src/loading/: load_async.py  load_sync.py
src/models/: models.py
src/navigation/: __init__.py  nav.py  nav_async.py  nav_sync.py
src/utils/: browser_utils.py
